# Account-Service

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  create_client.py  docker-compose.yaml  pyproject.toml  requirements.in  requirements.txt  venv.sh
app/: app.py  deps.py  responses.py  utils.py
app/db/: create_client.py  models.py  redis.py  sessions.py
app/db/schemas/: auth.py  clients.py  users.py
app/routers/: auth.py  client.py  users.py
tests/: conftest.py  test_app.py
tests/router/: test_auth.py  test_users.py
