[project]
name = "account-service"
version = "0.1.0"
description = "Account service"
authors = [
    { name = "Parash Subedi", email = "subediparas5@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "anyio>=4.7.0",
    "bcrypt>=4.2.1",
    "certifi>=2024.12.14",
    "cffi>=1.17.1",
    "click>=8.1.8",
    "cryptography>=44.0.0",
    "dnspython>=2.7.0",
    "ecdsa>=0.19.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.6",
    "greenlet>=3.1.1",
    "h11>=0.14.0",
    "httpcore>=1.0.7",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "idna>=3.10",
    "iniconfig>=2.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.5",
    "mako>=1.3.8",
    "markupsafe>=3.0.2",
    "mysqlclient>=2.2.6",
    "orjson>=3.10.13",
    "packaging>=24.2",
    "passlib>=1.7.4",
    "phonenumbers>=8.13.52",
    "pluggy>=1.5.0",
    "pyasn1>=0.6.1",
    "pycparser>=2.22",
    "pydantic>=2.10.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.1",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "redis>=5.2.1",
    "rsa>=4.9",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.36",
    "starlette>=0.41.3",
    "types-python-jose>=3.3.4.20240106",
    "typing-extensions>=4.12.2",
    "ujson>=5.10.0",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
    "watchfiles>=1.0.3",
    "websockets>=14.1",
]

[tool.flake8]
max-line-length = 120

[tool.black]
target-version = ["py311"]
line-length =120

[tool.isort]
profile = "black"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
optional-dependencies.test = { file = ["requirements-test.txt"] }
